--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aws---tutorial",
   "version": "1.0.0",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.21.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
